--- a/Handwritten Digits Classifier/Handwritten Digits Classifier Project.ipynb
+++ b/Handwritten Digits Classifier/Handwritten Digits Classifier Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "93e52302",
    "metadata": {},
    "outputs": [],
@@ -13,15 +13,67 @@
     "import torch.optim as optim \n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import torchvision \n",
     "import torchvision.transforms as transforms \n",
-    "from torch.utils.data import DataLoader "
+    "from torch.utils.data import DataLoader\n",
+    "from torch.utils.data import random_split\n",
+    "from torchvision import datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "2c5cdbb0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transform = transforms.Compose([\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize((0.5),(0.5))\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "4d256cf9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dataset = datasets.MNIST(root='data', train=True, download=True, transform=transform)\n",
+    "test_dataset = datasets.MNIST(root='data', train=False, download=True, transform=transform)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "89b09ce2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_len = int(len(train_dataset) * 0.8)\n",
+    "val_len = len(train_dataset) - train_len\n",
+    "\n",
+    "train_subset, val_subset = random_split(\n",
+    "    train_dataset, [train_len, val_len], generator=torch.Generator().manual_seed(42)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "5ac89c8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_loader = DataLoader(dataset=train_subset, batch_size=64, shuffle=True)\n",
+    "test_loader = DataLoader(dataset=test_dataset, batch_size=64, shuffle=False)\n",
+    "val_loader = DataLoader(dataset=val_subset, shuffle=False, batch_size=64)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c5cdbb0",
+   "id": "5c46c54f",
    "metadata": {},
    "outputs": [],
    "source": []
